src/objects/analyticsadopt__DatasetSpecs__c.object
<CustomObject>
    <fields>
        <fullName>analyticsadopt__Column_API_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Column API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>analyticsadopt__Column_Label_Name__c</fullName>
        <description>Making it not required for now</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Column Label Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>analyticsadopt__Dataset_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dataset ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>analyticsadopt__Dataset_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dataset Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>analyticsadopt__Format__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Format</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>analyticsadopt__Is_Cus_Act_Enabled__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Is Cus Act Enabled</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>analyticsadopt__Is_Derived__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Is Derived</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>analyticsadopt__Is_Exposed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Is Exposed</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>analyticsadopt__Is_Multivalue__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Is Multivalue</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>analyticsadopt__Is_SF_Act_Enabled__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Is SF Act Enabled</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>analyticsadopt__Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>DatasetSpecs</label>
    <listViews>
        <fullName>analyticsadopt__All</fullName>
        <columns>NAME</columns>
        <columns>analyticsadopt__Dataset_Name__c</columns>
        <columns>analyticsadopt__Type__c</columns>
        <columns>analyticsadopt__Column_API_Name__c</columns>
        <columns>analyticsadopt__Format__c</columns>
        <columns>analyticsadopt__Column_Label_Name__c</columns>
        <columns>analyticsadopt__Dataset_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>DatasetSpecs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DatasetSpecs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>